--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="description" content="This is a Zam Zam Restaurant Website Template made by Pathma Priya M">
+    <meta name="description" content="This is a Zest Haven Restaurant Website Template made by Ishika Datta">
     <title>Zest Haven</title>
     <link rel="shortcut icon" href="favicon.jpg" type="image/jpg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -423,8 +423,8 @@
                         <div class="separator"></div>
                     </div>
                     <div class="profile">
-                        <img src="images/chef-avatar.jpg" alt="Pathma Priya" width="100" height="100" loading="lazy" class="img">
-                        <p class="label-2 profile-name">Pathma Priya</p>
+                        <img src="images/chef-avatar.jpg" alt="Ishika Datta" width="100" height="100" loading="lazy" class="img">
+                        <p class="label-2 profile-name">Ishika Datta</p>
                     </div>
                 </div>
             </section>
@@ -674,7 +674,7 @@
         </div>
         <div class="footer-bottom">
             <p class="copyright">Crafted by
-                <a href="https://github.com/PathmaPriyaM/RestaurantWebsiteApplication" target="_blank" class="link">PathmaPriyaM</a>
+                <a href="https://github.com/IshikaXDatta" target="_blank" class="link">Ishika Datta</a>
             </p>
         </div>
     </div>
