--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <span class="span">+91 123 456 789</span>
         </a>
         <div class="separator"></div>
-        <a href="mail:booking@zamzamrestaurant.com" class="topbar-item link">
+        <a href="mail:booking@zesthaven.com" class="topbar-item link">
             <div class="icon"><ion-icon name="mail-outline" aria-hidden="true"></ion-icon></div>
             <span class="span">booking@zesthaven.com</span>
         </a>
@@ -93,7 +93,7 @@
                     Kolkata-700016, West Bengal, India
                 </address>
                 <p class="body-4 navbar-text">Open : 9.00 am - 12.00pm </p>
-                <a href="mail:booking@zamzam.com" class="body-4 sidebar-link">booking@zesthaven.com</a>
+                <a href="mail:booking@zesthaven.com" class="body-4 sidebar-link">booking@zesthaven.com</a>
                 <div class="separator"></div>
                 <p class="contact-label">Booking Call</p>
                 <a href="tel:+91-987-654-3210" class="body-1 contact-number hover-underline">+91-987-654-3210</a>
@@ -614,7 +614,7 @@
                 <address class="body-4">
                 Restaurant Lane, Park Street, Kolkata-700016, West Bengal, India
                 </address>
-                <a href="mailto:booking@zamzamrestaurant.com" class="body-4 contact-link">booking@zesthaven.com</a>
+                <a href="mailto:booking@zesthaven.com" class="body-4 contact-link">booking@zesthaven.com</a>
                 <a href="tel:+91123456789" class="body-4 contact-link">Booking Call +91-123-456789</a>
                 <p class="body-4">Open : 08:00 am - 12.00 pm</p>
                 <div class="wrapper">
